Slightly improved new tab theme syntax and rewrote youtube theme in stylus

--- a/chromium/.config/Chromium/HumbleNewTabPage/HumbleNewTabPage.styl
+++ b/chromium/.config/Chromium/HumbleNewTabPage/HumbleNewTabPage.styl
@@ -19,11 +19,11 @@ body
 
 .folder
   & .icon
-    filter_png(171%)
+    filter_png 171%
 
 .devices
   & .icon
-    filter_png(87%)
+    filter_png 87%
 
 #options_button
   opacity 0
