Added a youtube theme

--- a/chromium/.config/Chromium/Userstyles/youtube/youtube_player.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/youtube_player.styl
@@ -1,5 +1,5 @@
-accent = #1277c5
-middle = silver
+@require '../include/colors'
+
 scrubber_height = 7px
 
 /* Player progress bar */
@@ -17,7 +17,7 @@ scrubber_height = 7px
     background accent !important
 
   &:after
-    background middle !important
+    background highlight !important
 
 /* UI buttons */
 .ytp-playlist-menu-button-icon .ytp-svg-fill
