Created makefile for youtube theme

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
@@ -1,3 +1,8 @@
+/* youtube_comments.styl
+   Part of the exwm cyan style
+
+   Author: Tristan Maat <tm@tlater.net>
+*/
 @require "../include/colors.styl"
 
 .all-comments
