--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_player.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_player.styl
@@ -1,3 +1,8 @@
+/* youtube_player.styl
+   Part of the exwm cyan style
+
+   Author: Tristan Maat <tm@tlater.net>
+*/
 @require '../include/colors'
 
 scrubber_height = 7px
