--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_playerpage.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_playerpage.styl
@@ -1,3 +1,8 @@
+/* youtube_playerpage.styl
+   Part of the exwm cyan style
+
+   Author: Tristan Maat <tm@tlater.net>
+*/
 @require "../include/colors.styl"
 
 /* Header */
