--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_subscriptions.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_subscriptions.styl
@@ -1,3 +1,8 @@
+/* youtube_subscriptions.styl
+   Part of the exwm cyan style
+
+   Author: Tristan Maat <tm@tlater.net>
+*/
 @require '../include/colors'
 
 /* Feed header */
