Added more tweaks to the youtube theme

--- a/chromium/.config/Chromium/Userstyles/include/colors.styl
+++ b/chromium/.config/Chromium/Userstyles/include/colors.styl
@@ -2,6 +2,7 @@ back = #0f0f0f
 highlight = #091f2e
 highlight_back = #11151c
 accent = #268bd2
+accent_back = #0a3749
 
 font_color = #99d1ce
 font_visited = #599cab
