Further tweaking of youtube theme

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
@@ -134,8 +134,6 @@ body #footer-container
       border-color accent
     &:hover
       border-color accent
-    &:hover
-      border-color accent
 
 // UIX buttons
 .yt-uix-button-default
@@ -158,6 +156,7 @@ body #footer-container
     &:active
     &:focus
       background highlight_back
+      border-color highlight_back
   .yt-uix-button-icon
   &:before
     recolor_black_png 147%
