Minor changes to text-aid-too mode and youtube style

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
@@ -44,3 +44,8 @@
         background-image none
         background-color highlight_back
         border-color highlight_back
+
+.action-panel
+  &-loading
+  &-error
+    color font_color
