--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
@@ -166,6 +166,10 @@ body #footer-container
   border-color highlight
   &:hover
     background-color accent_back
+    .yt-uix-button-content
+      color font_color
+  .yt-uix-button-content
+    color highlight_back
   &[disabled]
     &
     &:hover
