--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_player.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_player.styl
@@ -16,11 +16,11 @@ scrubber_height = 7px
   background rgba(252, 252, 252, 0.7)
 
 /* Volume slider */
-.ytp-bigmode .ytp-volume-slider-handle
-.ytp-volume-slider-handle
+.ytp-volume-slider-track
+  &
+  .ytp-bigmode &
   &:before
     background accent !important
-
   &:after
     background highlight !important
 
