--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_playerpage.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_playerpage.styl
@@ -43,7 +43,6 @@
     a
       color accent
 
-
 .yt-card
   .yt-uix-tabs
     border-bottom 2px solid highlight_back
@@ -80,6 +79,12 @@
 /* Watch sidebar */
 #watch7-sidebar
   .video-list-item
+    &:hover
+      .title
+        &
+        .yt-deemphasized-text
+          color font_color
+          text-decoration underline
     a
       .title
         color font_color
