Changes to xterm and youtube theme
 - Changed the XTerm background to match the general theme background

 - Added user channel styles to youtube theme

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_channel.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_channel.styl
@@ -38,6 +38,16 @@
 .section-list li .item-section .branded-page-box
   border-bottom 2px solid highlight_back
 
+.yt-uix-expander-ellipsis
+  background-color highlight
+
+.video-player-view-component
+  color font_color
+  .view-count .count
+    color font_visited
+  .video-detail a
+    color accent
+
 /* Playlists */
 .yt-lockup-playlist-item
   border-bottom 2px solid highlight_back
