--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
@@ -14,8 +14,6 @@
 .display-message
   color font_color
 
-
-
 .comments
   .comment-header
     .user-name
@@ -61,6 +59,10 @@
         background-image none
         background-color highlight_back
         border-color highlight_back
+
+  b
+    color font_visited
+    font-weight bold
 
 .action-panel
   &-loading
