Add customization to the youtube playlist display

--- a/chromium/.config/Chromium/Userstyles/include/colors.styl
+++ b/chromium/.config/Chromium/Userstyles/include/colors.styl
@@ -14,3 +14,5 @@ recolor_black_png(arg)
   -webkit-filter invert(100%)
 recolor_gray_png(arg)
   -webkit-filter sepia(100%) hue-rotate(136deg) saturate(169%) brightness(arg)
+recolor_white_png(arg)
+  -webkit-filter sepia(100%) saturate(500%) hue-rotate(154deg) brightness(arg)
