--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
@@ -220,3 +220,7 @@ body #footer-container
     &:focus
     .yt-uix-menu-trigger-selected &
       background-color highlight_back
+
+/* Notification menu (iframe) */
+body.Vzc
+  background-color transparent
