Add scrollbar customizations to the youtube theme

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
@@ -224,3 +224,19 @@ body #footer-container
 /* Notification menu (iframe) */
 body.Vzc
   background-color transparent
+
+/* Scrollbars */
+.yt-scrollbar
+.yt-scrollbar-dark
+  ::-webkit-scrollbar-thumb
+    background accent_back
+    &:hover
+      background font_color_back
+
+  ::-webkit-scrollbar-track
+    background transparent
+    border none
+    -webkit-box-shadow none
+
+  ::-webkit-scrollbar-track-piece
+    background transparent
