--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
@@ -44,6 +44,10 @@
   .sprite_dislike
     recolor_black_png 100
 
+  .sprite_dislike_on
+    -webkit-filter invert(100%) sepia(100%) saturate(200%) hue-rotate(-15deg) brightness(85%)
+
+
   .feedback-banner
     background-color highlight_back
     border-color highlight_back
