--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
@@ -89,6 +89,9 @@ li.guide-section h3 a
 .guide-section-separator
   border-bottom 2px solid highlight_back
 
+.yt-uix-button-icon-hover-action-menu
+  -webkit-filter invert(100%) sepia(100%) saturate(169%) hue-rotate(150deg) brightness(140%)
+
 /* Footer */
 body #footer-container
   background-color back
