Recolor additional buttons in the YouTube theme

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
@@ -98,3 +98,11 @@
 
       a
         position initial
+
+// Comment menu dropdown button
+.sprite_dropdown
+  recolor_gray_png 100%
+
+  .comments &
+    width 14px
+    height 15px
