Improve button recoloring

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
@@ -80,9 +80,12 @@
   .comment-text-toggle
     height 100px
     position absolute
-    width 85%
-    bottom 27px
+    width 100%
+    bottom 26px
     background -webkit-linear-gradient(top, transparent 0%, highlight 85%)
+
+    .reply &
+      width 87%
 
     a
       bottom 0
