--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
@@ -26,7 +26,7 @@ h1.yt
 
 // Youtube logo
 #yt-masthead #logo-container .logo
-  recolor_red_png 100%
+  -webkit-filter invert(100%) hue-rotate(56deg) saturate(200%) brightness(100%)
 
 // Search bar
 #masthead-search
@@ -52,6 +52,10 @@ h1.yt
 // Bell-button
 #yt-masthead-user .yt-uix-button-icon-bell
   recolor_black_png 200%
+
+// Youtube center button
+#masthead-user-button img
+  -webkit-filter sepia(100%) hue-rotate(136deg) saturate(100%) brightness(83%)
 
 /* Guide */
 #appbar-guide-menu
