Recolor the YouTube sidebar title

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_playerpage.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_playerpage.styl
@@ -91,6 +91,9 @@
 
 /* Watch sidebar */
 #watch7-sidebar
+  .watch-sidebar-head
+    color font_color
+
   .video-list-item
     &:hover
       .title
