Fix user image border in YouTube theme

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
@@ -53,6 +53,10 @@ h1.yt
 #yt-masthead-user .yt-uix-button-icon-bell
   recolor_black_png 200%
 
+// User image
+.yt-thumb-square
+  background back
+
 // Youtube center button
 #masthead-user-button img
   -webkit-filter sepia(100%) hue-rotate(136deg) saturate(100%) brightness(83%)
