Change footer logo color

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
@@ -109,7 +109,7 @@ body #footer-container
     border-width 2px
 
 #footer-logo .footer-logo-icon
-  recolor_red_png 100%
+  -webkit-filter invert(100%) hue-rotate(56deg) saturate(200%) brightness(100%)
 
 // This doesn't seem to work yet
 //#footer .yt-uix-button-icon
