Recolor new subscription box buttons

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_subscriptions.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_subscriptions.styl
@@ -68,3 +68,6 @@
     &:focus
       background-color highlight
       border 1px solid highlight_back
+
+.yt-uix-button-icon
+  recolor_black_png(100%)
