--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_player.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_player.styl
@@ -16,9 +16,7 @@ scrubber_height = 7px
   background rgba(252, 252, 252, 0.7)
 
 /* Volume slider */
-.ytp-volume-slider-track
-  &
-  .ytp-bigmode &
+.ytp-volume-slider-handle
   &:before
     background accent !important
   &:after
