Fix sidebar button color

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_main.styl
@@ -25,8 +25,12 @@ h1.yt
   border-bottom 2px solid highlight
 
 // Youtube logo
-#yt-masthead #logo-container .logo
-  -webkit-filter invert(100%) hue-rotate(56deg) saturate(200%) brightness(100%)
+#yt-masthead
+  #logo-container .logo
+    -webkit-filter invert(100%) hue-rotate(56deg) saturate(200%) brightness(100%)
+
+  .yt-uix-button-icon
+    -webkit-filter invert(100%) sepia(65%) saturate(500%) hue-rotate(152deg)
 
 // Search bar
 #masthead-search
