Fix further comment section annoyances

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
@@ -14,6 +14,7 @@
 
     &-collapsed-content
       border-color highlight_back
+      color font_color
 
   &-arrow
     .arrow-inner
@@ -130,3 +131,7 @@
   .comments &
     width 14px
     height 15px
+
+// Other comment pages
+.comment-section-header-renderer
+  color font_color
