Set youtube video title color

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_playerpage.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_playerpage.styl
@@ -46,6 +46,10 @@
     &:after
       recolor_black_png_to_red 100%
 
+/* Video title */
+.watch-title
+  color font_color
+
 /* Description */
 #watch-description
 #action-panel-details a
