Fix reply background color

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
@@ -9,6 +9,9 @@
 .comment-simplebox
   background-color transparent
 
+  &-frame
+    background-color white
+
   &-renderer
     border-bottom none
 
