Fix reply border

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
@@ -11,6 +11,8 @@
 
   &-frame
     background-color white
+    border-color highlight_back
+    border-radius 3px
 
   &-renderer
     border-bottom none
