Fix accidental reset

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_comments.styl
@@ -9,6 +9,11 @@
 .comment-simplebox
   background-color transparent
 
+  &-frame
+    background-color white
+    border-color highlight_back
+    border-radius 3px
+
   &-renderer
     border-bottom none
 
